--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -53,6 +53,12 @@
   transition: color 0.3s ease; /* Tambahkan transisi warna */
 }
 
+.nav-links .nav-link.active{
+  font-weight: bold;
+  color: #007bff; /* atau warna lain */
+  border-bottom: 2px solid #007bff;
+}
+
 .nav-links .nav-link:hover {
   /* Warna hover tetap pada nilai yang sudah ada */
 }
