--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .navbar-brand {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Contoh font */
+  font-family: 'Poppins', Tahoma, Geneva, Verdana, sans-serif; /* Contoh font */
 }
 
 .nav-link {
